syntax = "proto3";

import "google/protobuf/duration.proto";

package api;

option go_package = "github.com/NetEase-Media/easy-ngo/application/r/rms/api;api";

message Microservices {
  HTTP http = 1;
  GRPC grpc = 2;
  ServiceDiscovery sd = 9;
}

message HTTP {}

message GRPC {
  repeated GRPCServer servers = 1;
  repeated GRPCClient clients = 2;
}

message GRPCServer {
  string name = 1;
  string network = 2;
  string addr = 3;
  google.protobuf.Duration timeout = 4;
  string registrar_ref = 5;
  string logger_ref = 6;
  bool enable_metrics = 7;
  bool enable_tracing = 8;
  bool enable_logging = 9;
  ServerTLSConfig tls = 10;
  GRPCServerOptions grpc_opts = 11;
  map<string, string> metadata = 12;
}

message GRPCServerOptions {
  uint32 max_concurrent_streams = 1;
  int64 max_receive_message_size = 2;
  int64 max_send_message_size = 3;
  GRPCServerKeepaliveParams keepalive_params = 4;
  GRPCServerKeepalivePolicy keepalive_policy =5;
  int32 initial_window_size = 6;
  int32 initial_conn_window_size = 7;
  int64 write_buffer_size = 8;
  int64 read_buffer_size = 9;
  google.protobuf.Duration connection_timeout = 10;
  uint32 max_header_list_size = 11;
}

message GRPCServerKeepaliveParams {
  google.protobuf.Duration max_connection_idle = 1;
  google.protobuf.Duration max_connection_age =2;
  google.protobuf.Duration max_connection_age_grace = 3;
  google.protobuf.Duration time = 4;
  google.protobuf.Duration timeout =5;
}

message GRPCServerKeepalivePolicy {
  google.protobuf.Duration min_time =1;
  bool permit_without_stream = 2;
}

message GRPCClient {
  string name = 1;
  string target = 2;
  google.protobuf.Duration timeout = 3;
  string discovery_ref = 4;
  string balancer_name = 5;
  bool enabled_health_check = 6;
  string logger_ref = 7;
  bool enable_metrics = 8;
  bool enable_tracing = 9;
  bool enable_logging = 10;
  ClientTLSConfig tls = 11;
  GRPCClientOptions grpc_opts = 12;
}

message GRPCClientOptions {
  bool block = 1;
  string authority = 2;
  string user_agent = 3;
  GRPCClientConnectParams connect_params = 4;
  GRPCClientKeepaliveParams keepalive_params = 5;
  int32 initial_window_size = 6;
  int32 initial_conn_window_size = 7;
  int64 write_buffer_size = 8;
  int64 read_buffer_size = 9;
  uint32 max_header_list_size = 10;
  bool disable_retry = 11;
}

message GRPCClientKeepaliveParams {
  google.protobuf.Duration time = 1;
  google.protobuf.Duration timeout = 2;
  bool permit_without_stream = 3;
}

message GRPCClientConnectParams {
  google.protobuf.Duration base_delay = 1;
  float multiplier = 2;
  float jitter = 3;
  google.protobuf.Duration max_delay = 4;
  google.protobuf.Duration min_connect_timeout = 5;
}

message ServiceDiscovery {
    repeated Etcd etcds = 1;
}

message Etcd {
  string name = 1;
  repeated string endpoints = 2;
  google.protobuf.Duration connect_timeout = 3;
  BasicAuth auth = 4;
  string namespace = 5;
  google.protobuf.Duration ttl = 6;
  ClientTLSConfig tls = 7;
  string logger_ref = 8;
}

message BasicAuth {
  string username = 1;
  string password = 2;
}

message ServerTLSConfig {
  string cert_file = 1;
  string key_file = 2;
}

message ClientTLSConfig {
  string cert_file = 1;
  string server_name = 2;
}